---
source: euphony-dsp/src/tertiary.rs
assertion_line: 80
expression: node
---
Node {
    name: "Clamp",
    module: [
        "tertiary",
    ],
    impl_path: "euphony_dsp::tertiary",
    id: 76,
    inputs: [
        Input {
            name: "input",
            id: 0,
            trigger: false,
            default: 0.0,
        },
        Input {
            name: "min",
            id: 1,
            trigger: false,
            default: 0.0,
        },
        Input {
            name: "max",
            id: 2,
            trigger: false,
            default: 0.0,
        },
    ],
    buffers: [],
    docs: " Restrict a value to a certain interval unless it is NaN.\n\n Returns `max` if `input` is greater than `max`, and `min` if `input` is\n less than `min`. Otherwise this returns `input`.\n\n Note that this function returns NaN if the initial value was NaN as\n well or `min > max`\n",
}
